<resources>
    <string name="app_name">Articles</string>
    <string name="action_all_article">All article</string>
    <string name="action_settings">Settings</string>
    <string name="action_set_target">Import markdown zip</string>
    <string name="action_find">Find in page</string>
    <string name="action_close">Close</string>
    <string name="action_to_top">↑</string>
    <string name="action_to_bottom">↓</string>
    <string name="message_search_in_progress">Search in progress…</string>
    <string name="content_description_find_downward">Find downward</string>
    <string name="content_description_find_upward">Find upward</string>
    <string name="content_description_clear_input">Clear input</string>
    <string name="content_description_close_find_area">Close find area</string>
    <string name="action_switch_title_filter">Use title filter</string>
    <string name="action_clear_all_articles">Clear all articles</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="hint_search_articles">Please input search word</string>
    <string name="subhead">Subhead</string>
    <string name="tab">Tab</string>
    <string name="message_done_import">Completed import.</string>
    <string name="reload">Reload</string>
    <string name="action_copy_title">Copy title</string>
    <string name="action_copy_source">Copy source</string>
    <string name="action_add_to_bookmark">Add to bookmark</string>
    <string name="action_sort">Sort</string>
    <string name="hint_input_content">Please would you input any text...</string>
    <string name="title">Title</string>
    <string name="menu">Menu</string>
    <string name="delete">Delete</string>
    <string name="button_filter_by_month">Filter by month</string>
    <string name="button_open_date">Open date</string>
    <string name="action_date_filter">Date filter</string>
    <string name="title_sort_setting">Sort setting</string>
    <string name="message_done_article_search">Found %d articles.</string>
    <string name="message_not_found_article_search">Not found.</string>
    <string name="label_last_modified">Last updated: %s / %,d</string>
</resources>
