<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_all_article"
        android:orderInCategory="100"
        android:title="@string/action_all_article"
        />

    <item android:id="@+id/action_bookmark"
        android:title="@string/action_bookmark"
        android:orderInCategory="100"
        />

    <item
        android:id="@+id/action_set_target"
        android:orderInCategory="100"
        android:title="@string/action_set_target"
        />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        />

    <item
        android:id="@+id/action_date_filter"
        android:orderInCategory="100"
        android:title="@string/action_date_filter"
        />

    <item
        android:id="@+id/action_switch_title_filter"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="100"
        android:title="@string/action_switch_title_filter"
        />

</menu>