<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="fragment"
            type="jp.toastkid.article_viewer.article.detail.ContentViewerFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        tools:background="@color/design_default_color_secondary_variant"
        >
        <EditText
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textCapSentences"
            android:imeOptions="actionSearch"
            android:hint="@string/hint_search_articles"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/search_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tab_list"
            tools:ignore="Autofill,LabelFor"/>
        <TextView
            android:id="@+id/search_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="@id/input"
            app:layout_constraintEnd_toEndOf="@id/input"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <FrameLayout
            android:id="@+id/tab_list"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:background="@drawable/ripple_transparent"
            android:onClick="@{view -> fragment.tabList()}"
            app:layout_constraintEnd_toStartOf="@id/subhead"
            >
            <ImageView
                android:id="@+id/tab_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:layout_gravity="center"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_tab"
                android:contentDescription="@string/tab"
                tools:tint="@android:color/white"
                />
            <TextView
                android:id="@+id/tab_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center"
                android:textSize="9dp"
                tools:textColor="@android:color/white"
                tools:text="99"
                tools:ignore="SpUsage"
                />
        </FrameLayout>
        <ImageView
            android:id="@+id/subhead"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_subhead"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:background="@drawable/ripple_transparent"
            android:onClick="@{view -> fragment.showSubheads()}"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/subhead"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>